Closed Bug 993278 Opened 11 years ago Closed 11 years ago

[Bluetooth][Certification][PTS][Bluedroid][1.4] HFP TC_AG_NUM_BV_01_I

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:1.4+, firefox29 wontfix, firefox30 fixed, firefox31 fixed, b2g-v1.4 fixed, b2g-v2.0 fixed)

VERIFIED FIXED
1.4 S6 (25apr)
blocking-b2g 1.4+
Tracking Status
firefox29 --- wontfix
firefox30 --- fixed
firefox31 --- fixed
b2g-v1.4 --- fixed
b2g-v2.0 --- fixed

People

(Reporter: ericcc, Assigned: ben.tian)

References

Details

Attachments

(2 files)

Attached file TC_AG_NUM_BV_01_I.zip
### ENV Nexus 4/Bluedroid https://pvtbuilds.mozilla.org/pvt/mozilla.org/b2gotoro/nightly/mozilla-aurora-nexus-4/2014/03/2014-03-25-16-02-01/ ### STR 1. PTS 5.0 2. TC_AG_COD_BV_02_I ### Expected Pass ### Actual Test case : TC_AG_NUM_BV_01_I started - SDP Service record for PTS: 'Handsfree HF' successfully registered - The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3, - AT: SPP connect succeeded - AT: WARNING: IUT does not report support for AT+CHLD=3 in its +CHLD response, but TSPC_HFP_2_12c is set to TRUE - AT: Service Level Connection established - AT: post SLC command sequence complete - MTC: AT+CNUM Final Verdict : None
Blocks: 986297
The cause is that HFP manager doesn't respond OK when subscriber number information is empty. Attached patch responds OK event if subscriber number information is empty.
Assignee: nobody → btian
Attachment #8404527 - Flags: review?(echou)
Comment on attachment 8404527 [details] [diff] [review] Patch 1 (v1): Respond OK even if subscriber number information is empty Review of attachment 8404527 [details] [diff] [review]: ----------------------------------------------------------------- LGTM.
Attachment #8404527 - Flags: review?(echou) → review+
Set 1.4? as this bug fails bluetooth certification HFP test on bluedroid.
blocking-b2g: --- → 1.4?
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
blocking-b2g: 1.4? → 1.4+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: