Bug 993278 - [bluedroid][HFP] Respond OK even if subscriber number information is empty. r=echou, a=1.4+